--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <!-- Nav Bar -->
+    <p id="time"></p>
   <header>
       <nav class="navbar navbar-expand-md navbar-light col-md-12 col-lg-12 s">
       <div class="navbar-brand text-light"><i>Awesome Book</i></div>
