--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <h4>copyright to Mohammed & Sahar</h4>
 </footer>
  <!-- js file -->
-    <script type="text/javascript" src="index.js"></script>
+    <script type="module" src="index.js"></script>
     <script src="https://moment.github.io/luxon/global/luxon.js"></script>
 
 </body>
